# rabbitmq_tdc_demo

./: .gitignore  README.md
go/: go.mod
go/internal/infraestructure/RabbitMQ/: amqp_publisher.go  amqp_subscriber.go  connection.go  constants.go  message_handler.go  messages.go
go/internal/infraestructure/common/: configuration_loader.go
go/internal/infraestructure/dto/: configuration.go
go/internal/infraestructure/entities/: message.go
go/publisher/: main.go
go/subscriber/: main.go
java/tdc/: pom.xml
java/tdc/src/main/java/com/tdc/demo/domain/: package-info.java
java/tdc/src/main/java/com/tdc/demo/domain/boundary/: package-info.java
java/tdc/src/main/java/com/tdc/demo/domain/boundary/input/: Consumer.java  package-info.java
java/tdc/src/main/java/com/tdc/demo/domain/boundary/output/: Producer.java  package-info.java
java/tdc/src/main/java/com/tdc/demo/domain/dto/: MessageDTO.java  package-info.java
java/tdc/src/main/java/com/tdc/demo/infrastructure/: package-info.java
java/tdc/src/main/java/com/tdc/demo/infrastructure/adapter/: package-info.java
java/tdc/src/main/java/com/tdc/demo/infrastructure/configuration/: BeanFactory.java  TdcApplication.java  package-info.java
java/tdc/src/main/resources/: application.properties
java/tdc/src/test/java/com/tdc/demo/: TdcApplicationTests.java
python/: pyproject.toml
python/rabbitmq/: amqp_demo.py  publisher_demo.py  subscriber_demo.py
python/rabbitmq/amqp/: connection.py  constants.py  publisher.py  subscriber.py
python/rabbitmq/utils/: logger.py
scripts/: set_venv.sh
(+4 files in other folders)
